--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,36 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1 {
   color: white;
+  margin-top: 65px;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  color: black;
+  padding-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  width: 700px;
+  height: 500px;
+  background-color: white;
+  border-radius: 10px;
+  margin: auto;
+}
+
+li {
+  list-style-type: none;
+  height: 50px;
+  font-size: 30px;
+  border: 1px solid gray;
+  margin: 10px 35px 0 0;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button {
+  padding: 10px;
+  font-size: 15px;
+  cursor: pointer;
 }
